src/objects/Sonoma_ET_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Default_From_Email__c</fullName>
        <label>Default From Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Default_From_Name__c</fullName>
        <label>Default From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_BU_Name__c</fullName>
        <label>ET BU Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Configuration_Key__c</fullName>
        <label>Send Configuration Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sonoma ET Config</label>
</CustomObject>